# cocos-engine-rag

./: .gitignore  AGENTS.md  Dockerfile  README.md  claude_desktop_config.json.sample  deploy_docker.bat  docker-compose.yml  main.py  pyproject.toml  remote_proxy.py  run_mcp.bat  test_code_parser.py  test_code_search.py  test_full_engine_parse.py  test_search.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-infrastructure-project-scaffold/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-document-crawling/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-document-parsing-chunking/: 03-01-SUMMARY.md
.planning/phases/04-embedding-vector-storage/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/06-mcp-server/: 06-01-SUMMARY.md
src/: code_indexer.py  code_parser.py  crawler.py  indexer.py  parser.py  server.py
src/core/: config.py  db.py  embedding.py  reranker.py  search.py  vector_store.py
tests/: test_embedding.py  test_infra.py  test_parser.py  test_vector_store.py
